unpackaged/main/default/objects/Writ__c/Writ__c.object-meta.xml
<CustomObject>
    <label>Writ</label>
    <nameField>
        <displayFormat>Writ-{00000}</displayFormat>
        <label>Writ Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Writs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>