unpackaged/main/default/objects/Writ__c/fields/Matter__c.field-meta.xml
<CustomField>
    <fullName>Matter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matter</label>
    <referenceTo>advpm__Matter__c</referenceTo>
    <relationshipLabel>Writs</relationshipLabel>
    <relationshipName>Writs</relationshipName>
    <type>Lookup</type>
</CustomField>