unpackaged/main/default/objects/Writ__c/fields/Writ_Requested__c.field-meta.xml
<CustomField>
    <fullName>Writ_Requested__c</fullName>
    <label>Writ Requested</label>
    <type>Date</type>
</CustomField>